[AVATAR] Fix JS cropping script and save square image, in case other themes need it

--- a/public/assets/css/left/left.css
+++ b/public/assets/css/left/left.css
@@ -81,7 +81,7 @@
 .icon-avatar {
       order: 1;
       height: calc(5 * var(--unit-size));
-      calc(5 * var(--unit-size));
+      width: calc(5 * var(--unit-size));
       margin-right: var(--small-size);
 }
 
